# raw.ninja

./: .gitignore  .golangci.yml  Dockerfile-backend  Dockerfile-frontend  README.md  docker-compose.yml  go.mod  go.sum  local.env  main.go  package-lock.json  package.json  todo.txt
.github/workflows/: backend-build.yaml  backend-lint.yml  build.yaml  golangci-lint.yml  lambdas.yaml
app/: app.go  initializers.go  migration.go
auth/: controller.go  jwt.go  middleware.go  model.go  repository.go  store.go  storer.go
backend/: Dockerfile  Dockerfile-production  go.mod  go.sum  main.go
cmd/: app.go  initializers.go  local.env  main.go  migration.go
common/: configuration.go  controller.go  database.go  id.go  model.go  user.go  validations.go
descriptor/: model.go  model_test.go  repository.go  store.go  storer.go
docs/: docs.go  swagger.json  swagger.yaml
envfiles/: local.env
environments/: example.env
frontend/: Dockerfile  Dockerfile-production  nginx.conf  package-lock.json  package.json
image/: calculations.go  calculations_test.go  image.go  importer.go  model.go  repository.go  store.go  storer.go
image-search/: README.md
lambdas/audit-handler/: README.md  pyproject.toml
lambdas/audit-handler/audit_handler/: __init__.py  audit_handler.py  config.py  database.py  models.py
lambdas/audit-handler/handler/: __init__.py
lambdas/audit-handler/tests/: test.env  test_audit_handler.py
lambdas/expiry-marker/: Dockerfile  README.md  pyproject.toml
lambdas/expiry-marker/expiry_marker/: __init__.py  config.py  database.py  dependency_register.py  handler.py  kms.py  models.py
lambdas/image-tagging/: pyproject.toml
lambdas/image-tagging/image_tagging/: clip_wrapper.py  handler.py
mail/: confirmation.html  passwordreset.html
photo/: controller.go  model.go  photo.go  repository.go  store.go  storer.go  thumbnail.go
scripts/: clean_database.sql  delete_registration.sql
search/: controller.go
src/: main.go
src/web/: app.go  (+1 more)
statistics/: controller.go  model.go
stats/: controller.go  model.go
storage/: store.go
store/: description.go  image.go  photo.go  user.go
user/: model.go  store.go
web/: logging.go  routes.go  routing.go
(+260 files in other folders)
