[tool.poetry]
name = "expiry_marker"
version = "0.1.0"
description = "AWS Lambda function marking photos with expiry date based on set lifecycle rules."
authors = ["Imre Barna <inokone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
inject = "^5.2.0"
SQLAlchemy = "^2.0.27"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.1.0"
bandit = "^1.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
